<?xml version="1.0" encoding="utf-8"?>
<gd.app.hiboard.ui.RecorderCardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recorderRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true">

    <TextView
        android:id="@+id/recorderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFeatureSettings="tnum"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="0.07"
        android:textColor="@color/hiboard_recorder_title_idle"
        android:textSize="32sp"
        android:textStyle="bold" />

    <gd.app.hiboard.ui.RecorderWaveView
        android:id="@+id/recorderWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/recorderMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/recorder_mark"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_recorder_mark" />

    <ImageButton
        android:id="@+id/recorderPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/recorder_start"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_recorder_record" />

    <ImageButton
        android:id="@+id/recorderSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/recorder_save"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_recorder_save" />
</gd.app.hiboard.ui.RecorderCardLayout>
